<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".WelcomeBackActivity">

        <ImageView
            android:id="@+id/welcomeback_bg"
            android:layout_width="643dp"
            android:layout_height="713dp"
            android:src="@drawable/ic_welcomeback_bg"
            android:contentDescription="@string/back_button"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="0dp"
            android:layout_marginBottom="-80dp"/>

       <ImageView
           android:id="@+id/back_icon"
           android:src="@drawable/ic_back"
           app:layout_constraintTop_toTopOf="parent"
           app:layout_constraintStart_toStartOf="parent"
           style="@style/back_icon" />

        <TextView
            android:id="@+id/welcomeback_h1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            app:layout_constraintTop_toBottomOf="@id/back_icon"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="56dp"
            android:layout_marginStart="38dp"
            style="@style/welcomback_h1" />

        <TextView
            android:id="@+id/welcomeback_h2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/enter_your_username_amp_password"
            app:layout_constraintTop_toBottomOf="@id/welcomeback_h1"
            app:layout_constraintStart_toStartOf="@id/welcomeback_h1"
            android:fontFamily="@font/roboto_medium"
            android:textSize="18sp"
            android:textColor="#565656"
            />

        <EditText
            android:inputType="text"
            android:id="@+id/welcomeback_username"
            android:layout_marginTop="117dp"
            android:hint="@string/username"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcomeback_h2"
            style="@style/edit_text" />

        <EditText
            android:layout_marginTop="67dp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:id="@+id/welcomeback_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/welcomeback_username"
            style="@style/edit_text" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/welcomeback_login"
            android:layout_width="229dp"
            android:layout_height="54dp"
            android:text="@string/login"
            android:layout_marginTop="95dp"
            app:layout_constraintTop_toBottomOf="@id/welcomeback_password"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            style="@style/getstarted_button" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forgotten_passwoard_nor_create_a_new_account"
            app:layout_constraintTop_toBottomOf="@id/welcomeback_login"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:gravity="center"
            android:fontFamily="@font/inder"
            android:textSize="15sp"
            android:textColor="#6B6B6B"
            android:layout_marginTop="18dp"/>





    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>